fix quality gate