@@ -9,7 +9,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import org.joda.time.DateTime;
 import org.springframework.stereotype.Service;
@@ -40,9 +39,7 @@ public class CommentQueryService {
       Set<String> followingAuthors =
           userRelationshipQueryService.followingAuthors(
               user.getId(),
-              comments.stream()
-                  .map(commentData -> commentData.getProfileData().getId())
-                  .collect(Collectors.toList()));
+              comments.stream().map(commentData -> commentData.getProfileData().getId()).toList());
       comments.forEach(
           commentData -> {
             if (followingAuthors.contains(commentData.getProfileData().getId())) {
@@ -63,9 +60,7 @@ public class CommentQueryService {
       Set<String> followingAuthors =
           userRelationshipQueryService.followingAuthors(
               user.getId(),
-              comments.stream()
-                  .map(commentData -> commentData.getProfileData().getId())
-                  .collect(Collectors.toList()));
+              comments.stream().map(commentData -> commentData.getProfileData().getId()).toList());
       comments.forEach(
           commentData -> {
             if (followingAuthors.contains(commentData.getProfileData().getId())) {
