@@ -77,7 +77,7 @@ public class ArticleDatafetcher {
                                 .cursor(a.getCursor().toString())
                                 .node(buildArticleResult(a))
                                 .build())
-                    .collect(Collectors.toList()))
+                    .toList())
             .build();
     return DataFetcherResult.<ArticlesConnection>newResult()
         .data(articlesConnection)
@@ -127,7 +127,7 @@ public class ArticleDatafetcher {
                                 .cursor(a.getCursor().toString())
                                 .node(buildArticleResult(a))
                                 .build())
-                    .collect(Collectors.toList()))
+                    .toList())
             .build();
     return DataFetcherResult.<ArticlesConnection>newResult()
         .data(articlesConnection)
@@ -181,7 +181,7 @@ public class ArticleDatafetcher {
                                 .cursor(a.getCursor().toString())
                                 .node(buildArticleResult(a))
                                 .build())
-                    .collect(Collectors.toList()))
+                    .toList())
             .build();
     return DataFetcherResult.<ArticlesConnection>newResult()
         .data(articlesConnection)
@@ -234,7 +234,7 @@ public class ArticleDatafetcher {
                                 .cursor(a.getCursor().toString())
                                 .node(buildArticleResult(a))
                                 .build())
-                    .collect(Collectors.toList()))
+                    .toList())
             .build();
     return DataFetcherResult.<ArticlesConnection>newResult()
         .data(articlesConnection)
@@ -289,7 +289,7 @@ public class ArticleDatafetcher {
                                 .cursor(a.getCursor().toString())
                                 .node(buildArticleResult(a))
                                 .build())
-                    .collect(Collectors.toList()))
+                    .toList())
             .build();
     return DataFetcherResult.<ArticlesConnection>newResult()
         .data(articlesConnection)
